# ARM_Driver_Guide

./: .gitignore  README.md  main.py  pyproject.toml
benchmarks/: run_demo_benchmark.py
demo/: context-simulator.json
demo/output/: events.jsonl
demo/profiles/: anon-b06e9ca4e08d.json
docs/: Second ARM project.docx  architecture.md  arm-repo-adoption-plan.md  dependencies.md  esp32-cam-setup.md
docs/action plan/: Phase 1 — Define scope and repository structure 9a1d9f5040ba48e6a031834a0653bbef.md  Phase 2 — Build baseline drowsiness detector 028e382884f34cb59a1b744f8003375d.md  Phase 3 — Add privacy layer 37e5ab0dae0e48638e52d6df8b8da25b.md  Phase 4 — Optimize for Arm 8de690cfd5ac4867bedd6e4e4c95cd44.md  Phase 5 — Add adaptive and context-aware features 60d318002ea54b57964e26c83c69a393.md  Phase 6 — Reliability and fail-safe layer 0255f723f91c41b0aaeb9af311aacf6a.md  Phase 7 — Submission packaging f2ef6bd5098343a3a7d50effa4163374.md
docs/device/: S02e4736252fa48d09b0a1a3a2993c5f0n.avif  S09d85f05f66a4e46b975c265f4c9765eJ.avif  S13a3d664e07b413fa8112c00fad7cb5bV.avif  S42458974def6466f81df5cbb6e549b84D.avif  S49192385c69d4acda16b18c8b7712bd3s.avif  S4b87b905e8bf49508436c5d00ea789a9G (1).avif  S515d05b0914149f5a78dfdcf118d16cbb.avif  S9e09cd341c7f4701bc47812816591931p.avif  Sac139ae56db641cead30f89785bb4fb4V.avif  Sbaccc8cead9c4abcb84ff6118e7a7280R.avif  Sc60f660aec6541e49eab03908c059eb2I.jpg_960x960q75.jpg_.avif
graphify-out/: .graphify_detect.json  .graphify_python  .graphify_root
graphify-out/cache/: stat-index.json
tests/: test_scaffold.py
(+35 files in other folders)
